# gpt-from-scratch

./: .gitignore  bigram.py  pyproject.toml
gpt/: v2.py
micrograd/: micrograd.py  mlp.py  torch_impl.py
tokenizer/: test.ipynb  test.py
