[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "My build of gpt from scratch"
authors = [
    { name="Cyan Ding", email="blueplus.d@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=1.21.6",
    "regex>=2025.11.3",
    "scipy>=1.7.3",
    "tiktoken>=0.12.0",
    "torch>=1.13.1",
]

